-fix excessive gap with table -use css variables

--- a/client/style.css
+++ b/client/style.css
@@ -1,3 +1,8 @@
+:root {
+    --pad: 0.4rem;
+    --font: 1rem
+}
+
 html, body {
     margin: 0;
     padding: 0;
@@ -12,17 +17,12 @@ h3 {
 body {
     display: grid;
     grid-template-rows: auto 1fr auto;
-    grid-template-areas: 
-        "header"
-        "center"
-        "footer";
-    height: 100%; 
     text-align: center;  
 }
 
 header {
     background-color: rgb(94, 138, 203);
-    font-size: 1.2rem;
+    font-size: var(--font);
 }
 
 main {
@@ -36,18 +36,18 @@ main {
 
 footer {
     background-color:  rgb(94, 138, 203);
-    font-size: 1rem;
+    font-size: var(--font);
 }
 
 input {
     background-color: rgb(76, 76, 204);
     color:black;
     border-radius: 50px;
-    border: .5rem solid;
-    padding: .5rem .5rem;
+    border: var(--pad) solid black;;
+    padding: var(--pad) var(--pad);
     font-weight: 100;
-    font-size: 1.2rem;
-    margin: .6rem;
+    font-size: var(--font);
+    margin: var(--pad);
     transition: all 0.1s;
 }
 
@@ -70,22 +70,16 @@ input.active {
 }
 
 th {
-    padding: 0.4rem 0.4rem; 
+    padding: var(--pad) var(--pad); 
     text-align: left;  
 }
 
 td {
-    padding: .4rem .4rem; 
+    padding: var(--pad) var(--pad); 
     text-align: left;  
-    overflow: scroll; 
 }
 
-.fullwidth {
-    justify-self: stretch; 
-    width: 100%;
-}
-
-.scroll {
+.table-scroll {
     overflow-x: auto;
     width: 100%;
     max-width: 100%;
